# VLC-OpenGL-ImGUI

./: CMakeLists.txt  README.md
include/: vlc_texture.hpp
src/: main.cpp  vlc_texture.cpp
